K8sPractice/ingress/ghost-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  namespace: ingress-example
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
        - image: ghost:latest
          imagePullPolicy: IfNotPresent
          name: ghost
          ports:
            - containerPort: 2368
          livenessProbe:
            initialDelaySeconds: 2
            periodSeconds: 10
            httpGet:
              path: /
              port: 2368
          readinessProbe:
            initialDelaySeconds: 2
            periodSeconds: 10
            httpGet:
              path: /
              port: 2368
      dnsPolicy: ClusterFirst
      restartPolicy: Always
  selector:
    matchLabels:
      app: ghost
