K8sPractice/ingress/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: ingress-example
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - image: nginx:latest
          imagePullPolicy: IfNotPresent
          name: nginx
          ports:
            - containerPort: 80
          livenessProbe:
            initialDelaySeconds: 2
            periodSeconds: 10
            httpGet:
              path: /
              port: 80
          readinessProbe:
            initialDelaySeconds: 2
            periodSeconds: 10
            httpGet:
              path: /
              port: 80
      dnsPolicy: ClusterFirst
      restartPolicy: Always
  selector:
    matchLabels:
      app: web
