K8sPractice/ingress/svc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc
  namespace: ingress-example
spec:
  replicas: 5
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 2
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: svc
    spec:
      containers:
        - image: mhausenblas/simpleservice:0.5.0
          imagePullPolicy: IfNotPresent
          name: svc
          ports:
            - containerPort: 9876
          livenessProbe:
            initialDelaySeconds: 2
            periodSeconds: 10
            httpGet:
              path: /health
              port: 9876
          readinessProbe:
            initialDelaySeconds: 2
            periodSeconds: 10
            httpGet:
              path: /health
              port: 9876
      dnsPolicy: ClusterFirst
      restartPolicy: Always
  selector:
    matchLabels:
      app: svc
