K8sPractice/ingress/ghost-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost
  namespace: ingress-example
spec:
  ports:
  - port: 80
    targetPort: 2368
    protocol: TCP
  selector:
    app: ghost
  sessionAffinity: None
status:
  loadBalancer: {}
