K8sPractice/ingress/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: ingress-example
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: web
  sessionAffinity: None
status:
  loadBalancer: {}
