K8sPractice/ingress/svc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
  namespace: ingress-example
spec:
  ports:
    - port: 80
      targetPort: 9876
      protocol: TCP
  selector:
    app: svc
  sessionAffinity: None
