K8sPractice/ingress/nginx-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ingress-public
  namespace: ingress-example
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    ingress.kubernetes.io/add-base-url: "true"
spec:
  rules:
  - host:
    http:
      paths:
      - path: /web
        backend:
          serviceName: nginx
          servicePort: 80

      - path: /svc/(.*)
        backend:
          serviceName: svc
          servicePort: 80

      - path: /ghost
        backend:
          serviceName: ghost
          servicePort: 80
